# apps/console-web/src/shared/api/types.ts
@@ -15,6 +15,8 @@ export type BuildInput = components["schemas"]["BuildInput"];
 export type Build = components["schemas"]["Build"];
 export type BuildLog = components["schemas"]["BuildLog"];
 export type Release = components["schemas"]["Release"];
+export type DeliveryPolicy = components["schemas"]["DeliveryPolicy"];
+export type DeliveryPolicyInput = components["schemas"]["DeliveryPolicyInput"];
 export type Variable = components["schemas"]["Variable"];
 export type Parameter = components["schemas"]["Parameter"];
 export type ParameterInput = components["schemas"]["ParameterInput"];
